--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!--Title--><div class="title">
         <h1>
             <span>NACHO </span> 
-            GUILLEN
+            TORRES
         </h1>
      </div>
     <!--Tagline--><div class="tagline">
