--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     
     <!--Title--><div class="title">
         <h1>
-            <span>NACHO </span> 
+            <span>NACHO GUILLEN </span> 
             TORRES
         </h1>
      </div>
