--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     
     <!--Title--><div class="title">
         <h1>
-            <span>NACHO GUILLEN </span> 
-            TORRES
+            <span>NACHO</span> 
+            GUILLÉN
         </h1>
      </div>
     <!--Tagline--><div class="tagline">
