--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </h1>
      </div>
     <!--Tagline--><div class="tagline">
-        <h3>UI/UX DESIGNER | VIDEO EDITOR | ROCKSTAR FREELANCER <h3>
+        <h3>PART-TIME<h3>
              </div>
     <!--Bio--><div class="bio">
              <p>A storyteller at heart, with more than a decade of experience in journalism and media production. I use my creativity, passion and a human approach for product design. </p> 
