--- a/blog post.html
+++ b/blog post.html
@@ -31,7 +31,7 @@
         <div class="menu">
           <ul>
             <li>
-              <a href="index.html">
+              <a href="https://fivonacho.github.io/fibonacho/">
                 HOME
               </a>
             </li>
