--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </a>
           </li>
           <li>
-            <a href="blog post.html">
+            <a href="blog_post.html">
               PROJECTS
             </a>
           </li>
