--- a/index.html
+++ b/index.html
@@ -57,15 +57,13 @@
             </a>
           </li>
           <li>
-            <a href="#blog">
-              CONTACT
-            </a>
+            <a href="mailto:nacho.torres1@gmail.com">CONTACT</a>
           </li>
         </ul>
         <ul>
         </ul>
       </div>
-    </nav>
+    </nav>S
 
     <div class="wrapper">
 
@@ -92,7 +90,9 @@
 </section>
 
     </div>
-<!--Button--><button type="button" name="myButton">Download Resume</button>
+<!--Button--><a href="resume_igt.pdf"><button type="button" name="myButton">Download Resume</button></a>
+
+
 </div>
 
 </body>
